# djs

./: .gitignore  .prettierrc  CLAUDE.md  CMakeLists.txt  Cargo.toml  README.md  build.sh  gen_ast.py  install_deps_and_configure.ps1  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test  test.ljs  test.ps1  test.sh  tsconfig.base.json
.claude/: settings.local.json
.github/workflows/: CI.yml  Test.yml
djs/: .gitignore  Cargo.toml  PathMap.ts  SymbolTable.ts  Trace.ts  builtins.ts  collect_source_files.ts  decl.ts  diagnostics.ts  emit_c.ts  flatten_var_decl.ts  import_stmt_path.ts  main.test.ts  main.ts  package.json  resolve.ts  smoke.test.ts  test  tsconfig.json  type.ts  typecheck.ts  vitest.config.ts
djs/src/: main.rs
djs/tests/: as_cast_invalid_source_type.ljs  break_or_continue_outside_loops.diagnostics  break_or_continue_outside_loops.ljs  builtin_ljs_uninitialized.ljs  extern_const.ljs  fixed_size_array_in_local_vars.ljs  fixed_size_array_in_structs.ljs  for_loop.diagnostics  for_loop.ljs  for_loop_break_and_continue.stdout  global_struct_instances.ljs  hello-world-with-builtin.djs  hello_world.ljs  link_c.ljs  mem_size_of.ljs  setting_non_existent_property.diagnostics  setting_non_existent_property.ljs  simple_assignment.ljs  structs_1.diagnostics  structs_2_imported.ljs  structs_4_returning_from_functions.ljs  unbound_variables.diagnostics  untagged_union_1.ljs
djs_ast/: ASTVisitor.ts  Cargo.toml  Diagnostic.ts  QualifiedName.ts  Token.ts  ast.def.ts  ast.gen.ts  ast.py  astgen_items.ts  build.rs  gen_ast.js  gen_ast.py  gen_tokens.js  gen_ts_ast.js  gen_ts_ast.ts  gen_ts_tokens.js  gen_ts_tokens.ts  gen_ts_visitor.ts  gen_visitor.js  gen_visitor.py  index.d.ts  index.ts  package.json  sexpr.ts  test262.ts  tokens.def.ts  tokens.gen.ts  tsconfig.json  visitor.gen.ts
djs_ast/src/: Span.ts  Token.ts  TokenKind.ts  ast.def.js  ast.def.ts  ast.gen.ts  ast.js  ast.rs  diagnostic.ts  index.ts  js_ast.py  lexer.ts  lib.rs  parser.test.ts  parser.ts  pretty_print.ts  run_parser.ts  tokens.def.js  tokens.gen.ts  tokens.js  visitor.rs
djs_frontend/: gen_ts_ast.js  index.d.ts  package.json  test262.ts  test_262_baseline.failed.txt  test_262_baseline.success.txt  tsconfig.json
djs_frontend/src/: Span.ts  Token.ts  TokenKind.ts  ast.def.js  ast.gen.ts  diagnostic.ts  lexer.test.ts  lexer.ts  parser.test.ts  parser.ts  pretty_print.ts  run_parser.ts  tokens.def.js  tokens.gen.ts
djs_il/: .prettierrc.json  basic_block.ts  biome.json  dil.test.ts  func.ts  il.ts  il_nodes.ts  index.ts  instructions.ts  interpreter.test.ts  interpreter.ts  operand.ts  package.json  pretty_print.ts  to_c.test.ts  to_c.ts  tsconfig.json  type.ts  util.ts
djs_il/test_snapshots/: build_function.dil  fib.dil  generated_c_output_fib.c
djs_ljs/: DirectedGraph.ts  DiredctedGraph.ts  FS.ts  PathMap.ts  README.md  SourceFiles.ts  SymbolTable.ts  annotation_to_type.ts  ast_query.ts  build_symbol_table.test.ts  build_symbol_table.ts  builtins.ts  collect_source_files.test.ts  collect_source_files.ts  collect_top_level_types.test.ts  collect_top_level_types.ts  debug.ts  diagnostics.ts  emit_c.ts  ffi.ljs  flatten_var_decl.test.ts  flatten_var_decl.ts  import_stmt_path.ts  libc.ljs  main.test.ts  main.ts  package.json  program.ts  queue.ts  resolve.test.ts  resolve.ts  resolve_imports.test.ts  resolve_imports.ts  resolve_names.test.ts  resolve_names.ts  resolve_top_level.test.ts  resolve_top_level.ts  smoke.test.ts  stack.ts  subt.ts  (+7 more)
djs_ljs/stdlib/: ffi.ljs  libc.ljs  libc_shims.c  mem.ljs
djs_ljs/test-output/: hello_world
djs_ljs/tests/: address_of_simple_var.ljs  address_of_struct_member.ljs  address_of_struct_member.stdout  address_of_struct_member_through_pointer.ljs  as_cast.ljs  as_cast.stdout  as_cast_invalid_source_type.diagnostics  as_cast_invalid_source_type.ljs  builtin_ljs_uninitialized.ljs  check_return_type.diagnostics  check_return_type.ljs  check_top_level_returns.diagnostics  extern_const.ljs  fixed_size_array_in_local_vars.ljs  fixed_size_array_in_structs.ljs  for_loop.ljs.disabled  for_loop.stdout  for_loop_break_and_continue.ljs  global_struct_instances.ljs  hello_world.ljs  link_c.c  link_c.ljs  (+25 more)
djs_parser/: Cargo.toml  assert.ts  diagnostic.ts  index.ts  lexer.ts  package.json  parser.test.ts  parser.ts  pretty_print.ts  run_parser.ts  test262.failed.txt  test262.passed.txt  test262.ts  test_262_baseline.failed.txt  test_262_baseline.success.txt  tsconfig.json
djs_runtime/: .clangd  .gitignore  CMakeLists.txt  comparison_ops.c  comparison_ops.h  completion.h  djs.h  djs_array.c  djs_comparison_ops.c  djs_comparison_ops.h  djs_completion.h  djs_function.c  djs_object.c  djs_object.h  djs_object_ops.h  djs_prelude.h  djs_pretty_print.c  djs_property.c  djs_property.h  djs_runtime.c  djs_string.c  djs_string.h  function.c  function.h  meson.build  object.c  object.h  object_layout.h  prelude.h  print.c  print.h  property.h  runtime.c  runtime.h  test.sh  test_call.c  test_get_from_prototype.c  test_getter.c  test_object_get.c  test_prelude.h  (+1 more)
djs_std/: Stack.ts  ansi.ts  index.ts  package.json  tsconfig.json
djs_syntax/: Cargo.toml
djs_vm/: Cargo.toml
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt  array_test.cc  ast_test.cc  common_test.cc  function_test.cc  main_test.cc  object_test.cc
(+61 files in other folders)
